[gd_scene load_steps=7 format=3 uid="uid://bpw66ea71ov7a"]

[ext_resource type="Texture2D" uid="uid://djwerikpva4ku" path="res://icon.svg" id="1_qcneu"]
[ext_resource type="Script" path="res://manen/player_battle.gd" id="2_8claq"]

[sub_resource type="Animation" id="Animation_t3vu6"]
resource_name = "default attack"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.366667, 1),
"transitions": PackedFloat32Array(1, 4.59479, 1),
"update": 0,
"values": [Vector2(154, 386), Vector2(806, 386), Vector2(154, 386)]
}

[sub_resource type="Animation" id="Animation_1w16o"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(154, 386)]
}

[sub_resource type="Animation" id="Animation_ohqiy"]
resource_name = "defend"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.166667, 0.333333, 0.533333, 0.666667, 0.8, 0.933333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(154, 386), Vector2(171, 386), Vector2(130, 386), Vector2(171, 386), Vector2(130, 386), Vector2(171, 386), Vector2(154, 386)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_yahlc"]
_data = {
"RESET": SubResource("Animation_1w16o"),
"default attack": SubResource("Animation_t3vu6"),
"defend": SubResource("Animation_ohqiy")
}

[node name="battle_test" type="Node2D"]

[node name="player" type="Sprite2D" parent="."]
position = Vector2(154, 386)
texture = ExtResource("1_qcneu")
script = ExtResource("2_8claq")

[node name="AnimationPlayer" type="AnimationPlayer" parent="player"]
libraries = {
"": SubResource("AnimationLibrary_yahlc")
}

[node name="battle_ui" type="Node2D" parent="player"]

[node name="attack" type="Button" parent="player/battle_ui"]
offset_left = 108.0
offset_top = -53.0
offset_right = 209.0
offset_bottom = 12.0
rotation = -0.509679
text = "attack"

[node name="defend" type="Button" parent="player/battle_ui"]
offset_left = -13.0
offset_top = -200.0
offset_right = 115.0
offset_bottom = -137.0
rotation = 0.65252
text = "defend
"

[node name="enemy" type="Sprite2D" parent="."]
modulate = Color(1, 0, 0, 1)
position = Vector2(902, 355)
texture = ExtResource("1_qcneu")

[node name="Node2D" type="Node2D" parent="."]

[node name="Label" type="Label" parent="Node2D"]
offset_left = 539.0
offset_top = 68.0
offset_right = 579.0
offset_bottom = 91.0
text = "player_turn"

[node name="e" type="Node2D" parent="."]

[connection signal="animation_finished" from="player/AnimationPlayer" to="player" method="_on_animation_player_animation_finished"]
[connection signal="pressed" from="player/battle_ui/attack" to="player" method="_on_button_pressed"]
[connection signal="pressed" from="player/battle_ui/defend" to="player" method="_on_defend_pressed"]
